add maitre d'ouvrage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,11 @@ spring.application.name=iona-api
 mistral.api.key=Ut8nccfntpUrZrNEYEnHi9IIuDiyvBlg
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=100MB
+spring.datasource.url=jdbc:postgresql://localhost:5432/iona
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+server.port=8080
+spring.servlet.multipart.enabled=true
